// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalInformation component should render correctly 1`] = `
<Fragment>
  <Styled(AccountOverviewTile)
    ctaLink="/account?id=profile&subSection=edit-personal-info"
    ctaPath="/account/profile"
    ctaTitle="Edit personal Info"
    dataLocator="pi-editpersonalinfo"
    title="lbl_profile_personal_information"
  >
    <PersonalInformationDisplay
      airMiles="XXXXXXX"
      className=""
      labels={
        Object {
          "lbl_profile_edit_mailing_info": "Edit mailing Info",
          "lbl_profile_edit_personal_info": "Edit personal Info",
          "lbl_profile_mailing_address": "Mailing Information",
          "llbl_profile_personal_information": "Personal Information",
        }
      }
      mailingAddress={Object {}}
      myPlaceNumber=""
      userBirthday="feb 2019"
      userEmail=""
      userFullName=""
      userPhoneNumber=""
    />
  </Styled(AccountOverviewTile)>
</Fragment>
`;

exports[`PersonalInformation component should render emptyu correctly 1`] = `
<Fragment>
  <Styled(AccountOverviewTile)
    ctaLink="/account?id=profile&subSection=edit-personal-info"
    ctaPath="/account/profile"
    ctaTitle="lbl_profile_edit_personal_info"
    dataLocator="pi-editpersonalinfo"
    title="lbl_profile_personal_information"
  >
    <PersonalInformationDisplay
      airMiles=""
      className=""
      labels={Object {}}
      mailingAddress={Object {}}
      myPlaceNumber=""
      userBirthday=""
      userEmail=""
      userFullName=""
      userPhoneNumber=""
    />
  </Styled(AccountOverviewTile)>
</Fragment>
`;
